syntax = "proto3";

option go_package = "services/proto";

import "services/proto/general.proto";

message LikeUndoDetails {
  int64 article_id = 1;
  string liker_handle = 2;
}

message ReceivedLikeUndoDetails {
  // The ActivityPub ID of the object being liked.
  string liked_object_ap_id = 1;

  // The ActivityPub ID of the user liking the object.
  string liking_user_ap_id = 2;
}


// Service for sending and receiving server-to-server undo activities.
service S2SUndo {
  rpc ReceiveLikeUndoActivity(ReceivedLikeUndoDetails) returns (GeneralResponse);
  rpc SendLikeUndoActivity(LikeUndoDetails) returns (GeneralResponse);
  // Further specialisations, i.e. SendArticleUndo, to be placed here.
}
